@@ -1,3 +1,4 @@
+1/15/14 remove unused polymorphism in Solution.getConcentration*
 1/15/14 PHModel.pHToConcentrationOH calls pHToConcentrationH3O
 1/15/14 PHModel: handle null pH cases, add doc
 1/15/14 factor out all core computations into PHModel, reducing complexity of Solution
